--- a/main.tex
+++ b/main.tex
@@ -2,10 +2,17 @@
 \input{include/settings/settings}
 
 \begin{document}
+\todo{Put in front page}
 	\pagenumbering{arabic}
 	\section{Introduction}
 	Start with a short introduction that describes the topic and aim of the report. This should not be longer than 150 words.
 	\section{Theory}
+\todo{Answer the following questions 3. Vection. Explain what vection is and how it differs from other types of illusory self motions one might experience. When and how can we experience vection? What determines whether it happens or not and how long the sensation lasts? }
+	To understand why certain conditions can trick the human perception system into feeling self motion where there is none, we must first understand how the humans perceive motion, and why this causes no problems under normal conditions. This section covers the theory of human motion perception. 
+\subsection{Motion perception}
+	The human visual system is not  	
+
+
 	As a guideline, someone reading your report should be able to answer the questions/tasks stated for the topic after having read it. The more you understand your topic and can explain it in your own words, the greater the likelihood is that you succeed.\\\\
 	Report the theory relevant to your topic and the questions you are to answer. The available course literature (e.g. Yantis \& Abrams, 2017; Wolfe et al., 2015; Snowden, Thompson, \& Troscianko, 2006) are good starting points, but to get more specific information and achieve a higher grade you should also search for and read review articles (e.g. Elliot 2015; Elliott, Vale, Whitaker \& Buckley, 2009), and other relevant information. Use the suggested readings or references listed in your course book as a starting point and search for related articles and articles that have been citing the earlier ones.\\\\
 	If you have any questions regarding your report, please contact your teacher in reasonable time before hand in. The weekend of delivery is NOT reasonable.
@@ -19,5 +26,5 @@
 	perspective: Could you have used other approaches, references or theories? Did
 	anything go wrong (weaknesses)? What was good (strength)? Create relevant
 	subheadings that depict the topics you have extrapolated. 
-	
+	\bibliography{include/backmatter/bibliography}
 \end{document}
