updated to apa style referencing

--- a/include/backmatter/bibliography.bib
+++ b/include/backmatter/bibliography.bib
@@ -9,7 +9,7 @@
 }
 @ARTICLE{challenges,
   
-AUTHOR={Palmisano, Stephen and Allison, Robert S. and Schira, Mark M. and Barry, Robert J.},   
+AUTHOR={Palmisano and Stephen and Allison and Robert S and Schira and Mark M and Barry and Robert J},   
 	 
 TITLE={Future challenges for vection research: definitions, functional significance, measures, and neural bases},      
 	
