--- a/main.tex
+++ b/main.tex
@@ -1,21 +1,37 @@
 \documentclass[11pt,a4paper,oneside,table,xcdraw]{article}
 \input{include/settings/settings}
+\usepackage[natbibapa]{apacite} 
 
 \begin{document}
 \todo{Put in front page}
 	\pagenumbering{arabic}
 	\section{Introduction}
 	Start with a short introduction that describes the topic and aim of the report. This should not be longer than 150 words.
+	\section{What \textit{is} vection?}
+
+	One of the problems with the term vection, is that it has been used to describe many different things by different researchers. In 2017, \cite{challenges} published a paper in which they stated four challenges that vection research currently faces. One of these is that lack of a concrete definition. They gave examples of four different definitions that was used in research. As such one should clearly define which definition that is used. In this paper i use the 1st definition, which is.
+	\begin{quote}
+\textit{Vection is a visual illusion of self-motion in a stationary observer}
+	\end{quote}
+	Following this definition vection can be described more clearly. Vection as referred to in this report is the sensation of self motion that one can get when a large part of the visual field starts moving. This often happens near large objects that such as on a ferry, on a train, or sometimes in a car. For example, if an observer is in a stationary train and the beside it starts moving. It is not uncommon to feel as if you train has started to move instead. This is vection. We are currently unsure whether vection serves a purpose in making controlling self-motion of just arises from the processing of visual data. That is, whether it has some use or is a glitch in the visual system that only occurs under very particular conditions that never happened before modernity\todo{citation maybe}. 
 	\section{Theory}
 \todo{Answer the following questions 3. Vection. Explain what vection is and how it differs from other types of illusory self motions one might experience. When and how can we experience vection? What determines whether it happens or not and how long the sensation lasts? }
 	To understand why certain conditions can trick the human perception system into feeling self motion where there is none, we must first understand how the humans perceive motion, and why this causes no problems under normal conditions. This section covers the theory of human motion perception. 
 \subsection{Motion perception}
-	The human visual system is not  	
-
-
+	As with many of the processes that goes on in the brain, exactly how it understands motion is not understood. It is known that multiple process are involved in perceiving motion\todo{Find citation}. At least two process are involved. 
+\begin{figure}
+	\centering
+	\includegraphics[width=0.9\linewidth]{figure/process.png}
+	\caption{WIP model explaining the order of the next sections}
+	\label{fig:process}
+\end{figure}
+	\subsection{Direction sensitive cells}
+	\subsection{Direction sensitive neurons}
+	
 	As a guideline, someone reading your report should be able to answer the questions/tasks stated for the topic after having read it. The more you understand your topic and can explain it in your own words, the greater the likelihood is that you succeed.\\\\
 	Report the theory relevant to your topic and the questions you are to answer. The available course literature (e.g. Yantis \& Abrams, 2017; Wolfe et al., 2015; Snowden, Thompson, \& Troscianko, 2006) are good starting points, but to get more specific information and achieve a higher grade you should also search for and read review articles (e.g. Elliot 2015; Elliott, Vale, Whitaker \& Buckley, 2009), and other relevant information. Use the suggested readings or references listed in your course book as a starting point and search for related articles and articles that have been citing the earlier ones.\\\\
 	If you have any questions regarding your report, please contact your teacher in reasonable time before hand in. The weekend of delivery is NOT reasonable.
+
 	\section{Discussion}
 	After you have reported the theory and clarified or answered the questions stated in
 	the topic you should devote about one page to put this into context. Try to think of
@@ -26,5 +42,7 @@
 	perspective: Could you have used other approaches, references or theories? Did
 	anything go wrong (weaknesses)? What was good (strength)? Create relevant
 	subheadings that depict the topics you have extrapolated. 
-	\bibliography{include/backmatter/bibliography}
+\bibliographystyle{apacite}
+\bibliography{include/backmatter/bibliography}
+	
 \end{document}
