theory mostly done

--- a/include/backmatter/bibliography.bib
+++ b/include/backmatter/bibliography.bib
@@ -1,4 +1,46 @@
+@Article{Barlow1965,
+author={Barlow, H. B.
+and Levick, W. R.},
+title={The mechanism of directionally selective units in rabbit's retina.},
+journal={J Physiol},
+year={1965},
+month={Jun},
+volume={178},
+number={3},
+pages={477-504},
+note={5827909[pmid]},
+issn={0022-3751},
+url={http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1357309/}
+}
+@unknown{beetle,
+author = {Reichardt, W},
+year = {1961},
+month = {01},
+pages = {303-317},
+title = {Autocorrelation, a Principle for the Evaluation of Sensory Information by the Central Nervous System},
+booktitle = {Sensory Communication}
+}
+@book{coursebook,
+ place={New York, NY},
+ title={Sensation and perception},
+ volume={2},
+ publisher={Worth Publishers, Macmillan Learning}, author={Yantis, Steven and Abrams, Richard A.}
+, year={2017}}
 
+@Article{review,
+author={Borst, Alexander
+and Helmstaedter, Moritz},
+title={Common circuit design in fly and mammalian motion vision},
+journal={Nature Neuroscience},
+year={2015},
+month={Jun},
+day={29},
+publisher={Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved. SN  -},
+volume={18},
+pages={1067 EP  -},
+note={Review Article},
+url={http://dx.doi.org/10.1038/nn.4050}
+}
 @book{bjoernerBog,
 	title={Qualitative Methods for Consumer Research: The Value of the Qualitative Approach in Theory and Practice},
 	author={Bj{\o}rner, T.},
