theory of optic flow is done, starting work on factors that affect vection

--- a/include/backmatter/bibliography.bib
+++ b/include/backmatter/bibliography.bib
@@ -20,6 +20,52 @@ pages = {303-317},
 title = {Autocorrelation, a Principle for the Evaluation of Sensory Information by the Central Nervous System},
 booktitle = {Sensory Communication}
 }
+@article{vection,
+title = "The object and background hypothesis for vection",
+journal = "Vision Research",
+volume = "49",
+number = "24",
+pages = "2973 - 2982",
+year = "2009",
+issn = "0042-6989",
+doi = "https://doi.org/10.1016/j.visres.2009.09.017",
+url = "http://www.sciencedirect.com/science/article/pii/S0042698909004350",
+author = "Takeharu Seno and Hiroyuki Ito and Shoji Sunaga",
+keywords = "Vection, Object and background hypothesis, Rubin’s vase"
+}
+@article{opticalflow,
+  doi = {10.1101/sqb.2014.79.024638},
+  url = {https://doi.org/10.1101/sqb.2014.79.024638},
+  year  = {2014},
+  publisher = {Cold Spring Harbor Laboratory},
+  volume = {79},
+  pages = {141--148},
+  author = {Dora E. Angelaki},
+  title = {How Optic Flow and Inertial Cues Improve Motion Perception},
+  journal = {Cold Spring Harbor Symposia on Quantitative Biology}
+}
+@Book{opticflowheading,
+author={Gibson, James J.},
+title={The perception of the visual world.},
+year={1950},
+publisher={Houghton Mifflin},
+address={Oxford,  England},
+pages={xii, 242-xii, 242},
+abstract={The principal subject of this book is the visual perception of space. Chapters cover theories of perception, the visual field and visual world, formation of retinal images, a psychophysical theory of perception, stimulus variables for visual depth and distance, size and shape constancy, geometrical space and form, mean, learning, and spatial behavior. 121 references. (PsycINFO Database Record (c) 2016 APA, all rights reserved)}
+}
+@article{spatialfreq,
+title = "Dual multiple-scale processing for motion in the human visual System",
+journal = "Vision Research",
+volume = "37",
+number = "19",
+pages = "2685 - 2698",
+year = "1997",
+issn = "0042-6989",
+doi = "https://doi.org/10.1016/S0042-6989(97)00092-8",
+url = "http://www.sciencedirect.com/science/article/pii/S0042698997000928",
+author = "Shin'ya Nishida and Timothy Ledgeway and Mark Edwards",
+keywords = "Motion, First-order, Second-order, Adaptation, Direction, Spatial frequency"
+}
 @book{coursebook,
  place={New York, NY},
  title={Sensation and perception},
@@ -49,6 +95,21 @@ url={http://dx.doi.org/10.1038/nn.4050}
 	year={2015},
 	publisher={Gyldendal Akademisk}
 }
+@ONLINE{schcd,
+author={Robert H. Wurtz},
+title = {Scholarpedia: corollary discharge in primate vision},
+month = jan,
+year = {2014},
+url = {http://www.scholarpedia.org/article/Corollary_discharge_in_primate_vision#Interpreting_sensory_input}
+}
+@ONLINE{schopticflow,
+author={Florian Raudies},
+title = {Scholarpedia: optic flow},
+month = jan,
+year = {2013},
+url = {http://www.scholarpedia.org/article/Optic_flow#Initial_optic_flow_detection_and_processing}
+}
+
 @ARTICLE{challenges,
   
 AUTHOR={Palmisano and Stephen and Allison and Robert S and Schira and Mark M and Barry and Robert J},   
