theory done, finsishing duration, then on to

--- a/include/backmatter/bibliography.bib
+++ b/include/backmatter/bibliography.bib
@@ -33,6 +33,59 @@ url = "http://www.sciencedirect.com/science/article/pii/S0042698909004350",
 author = "Takeharu Seno and Hiroyuki Ito and Shoji Sunaga",
 keywords = "Vection, Object and background hypothesis, Rubin’s vase"
 }
+@article{auditory,
+title = "Auditorily-induced illusory self-motion: A review",
+journal = "Brain Research Reviews",
+volume = "61",
+number = "2",
+pages = "240 - 255",
+year = "2009",
+issn = "0165-0173",
+doi = "https://doi.org/10.1016/j.brainresrev.2009.07.001",
+url = "http://www.sciencedirect.com/science/article/pii/S0165017309000769",
+author = "Aleksander Väljamäe",
+keywords = "Illusory self-motion, Vection, Spatial sound, Cognitive acoustics, Multisensory perception, Virtual auditory display, Auditory motion"
+}
+@inproceedings{movement,
+ author = {Riecke, Bernhard E. and Feuereissen, Daniel and Rieser, John J. and McNamara, Timothy P.},
+ title = {Spatialized Sound Enhances Biomechanically-induced Self-motion Illusion (Vection)},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '11},
+ year = {2011},
+ isbn = {978-1-4503-0228-9},
+ location = {Vancouver, BC, Canada},
+ pages = {2799--2802},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1978942.1979356},
+ doi = {10.1145/1978942.1979356},
+ acmid = {1979356},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {bio-mechanical and auditory circular vection, cognitive science, cue-integration, human factors, psychology, self-motion illusions, self-motion perception, virtual reality},
+} 
+@article{wind,
+  doi = {10.3389/fpsyg.2015.00749},
+  url = {https://doi.org/10.3389/fpsyg.2015.00749},
+  year  = {2015},
+  month = {jun},
+  publisher = {Frontiers Media {SA}},
+  volume = {6},
+  author = {Shigehito Tanahashi and Kaoru Ashihara and Hiroyasu Ujike},
+  title = {Effects of auditory information on self-motion perception during simultaneous presentation of visual shearing motion},
+  journal = {Frontiers in Psychology}
+}
+@article{vectionlinear,
+title = "Self-motion perception from expanding and contracting optical flows overlapped with binocular disparity",
+journal = "Vision Research",
+volume = "45",
+number = "4",
+pages = "397 - 402",
+year = "2005",
+issn = "0042-6989",
+doi = "https://doi.org/10.1016/j.visres.2004.11.009",
+url = "http://www.sciencedirect.com/science/article/pii/S0042698904005838",
+author = "Hiroyuki Ito and Ikuko Shibata"
+}
 @article{opticalflow,
   doi = {10.1101/sqb.2014.79.024638},
   url = {https://doi.org/10.1101/sqb.2014.79.024638},
