figure work allmost done

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt,a4paper,oneside,table,xcdraw]{article}
 \input{include/settings/settings}
 \usepackage[natbibapa]{apacite} 
+\usepackage[export]{adjustbox}
 
 \begin{document}
 
@@ -51,32 +52,40 @@ Since a three dimensional world is projected onto a two dimensional surfaces(the
 		\label{fig:overtime}
 \end{figure}
 The retina has around 1 million receptive fields covering it's field of view, with many of the field types overlapping\cite[p. 64-65]{coursebook}. \cite{Barlow1965} found cells in the retina of rabbits, that gave a powerful responses when an object moved through a specific part of the rabbits vision in one direction, but would give little to no response if the object was moved in the opposite direction. These were named direction sensitive cells, or DS cells. \citet{review} points out that multiple models have been suggested that could explains this behaviour. They rely on combining the output of multiple receptive fields.\\\\
-If we imagine a neuron N that is connected to two receptive fields f1, and f2. This neuron, N, will only fire if it simultaneously receives a signal from both receptive fields. Now imagine that an object moves across each of the receptive fields in succession. The first field(f1) will fire, and then the second(f2) will fire. However, by the time the signal from f2 reaches N, the signal from f1 has already arrived. This problem is illustrated in Figure \todo{create fig.}. Because the signals do not arrive at the same time, N will not fire.\\\\
-
-Werner \cite{beetle} noted that such a system would respond to motion if the signal from f1 took longer time to reach N, compared to the signal from f2. Figure \todo{Another fig}, represent the system from above but with a delay between f1 and N. As before f1 still fires first, but it does not reach N immediately. When f2 fire, f1's signal is still heading towards N, and the signals now reach N at the same time. Neuron N now fire, signaling motion. There are a few things to note. (1) the delay is static. As such, each particular circuit is attuned to a specific speed. (2) f1 and f2 do not move, as such N only detects movement in a certain direction. (3) because the responses of the fields are dependent upon the moving object's brightness, N can not distinguish between a bright object moving at an angle between the fields, and a dim object moving in the direction N is sensitive to. (4) If a large  object cover both f1, and f2, both will fire so long as the object is in front of them, meaning that N will fire event if there no motion in a large object.
-\\\\
-These problem have led to the suggesting that these type of circuits operate in pairs of two. With two neurons (N1 and N2) sensitive to motion in opposite direction as shown in Figure \todo{fig}. In this circuit the final output OUT is a neuron which normally fires at a baseline rate. OUT get an excitatory signal, which causes it to fire more often, from N2, and an inhibitory which causes it to fire less often from N1. In other words, if N2 fires the output will be larger, and if N1 fires the output will be smaller, and if none or both fire the output will be the normal baseline. This change solves some of the problems with the circuit above. (3), in cases where the objects direction is neither in N1 or N2's preferred direction, both will give a weaker signal canceling each other out. (4) In case of a stationary object, both N1 and N2 will again send a similar signal, canceling each other out. This circuit has properties similar to those of the direction sensitive cells in rabbit eyes described by \cite{Barlow1965}. If a stimulus is moved over between f1 and f2. N2 will fire and N1 will not, resulting in a big output when luminance changes happens in the preferred direction. Reverse the direction and only a inhibitory signal is fired, resulting in a small output.
+If we imagine a neuron N that is connected to two receptive fields f1, and f2. This neuron, N, will only fire if it simultaneously receives a signal from both receptive fields. Now imagine that an object moves across each of the receptive fields in succession. The first field(f1) will fire, and then the second(f2) will fire. However, by the time the signal from f2 reaches N, the signal from f1 has already arrived. This problem is illustrated in Figure \ref{fig:nodelay}. Because the signals do not arrive at the same time, N will not fire.
+\begin{figure}
+\begin{multicols}{2}
+\includegraphics[width=1\linewidth]{figure/model1.png}
+\columnbreak
+\includegraphics[width=1\linewidth]{figure/model2.png}
+\end{multicols}
+\label{fig:nodelay}
+\caption{This cuircuit can blablabablabalablablalbalaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa}
+\end{figure}
+Werner \cite{beetle} noted that such a system would respond to motion if the signal from f1 took longer time to reach N, compared to the signal from f2. Figure \ref{delay}, represent the system from above but with a delay between f1 and N. As before f1 still fires first, but it does not reach N immediately. When f2 fire, f1's signal is still heading towards N, and the signals now reach N at the same time. Neuron N now fire, signaling motion. There are a few things to note. (1) the delay is static. As such, each particular circuit is attuned to a specific speed. (2) f1 and f2 do not move, as such N only detects movement in a certain direction. (3) because the responses of the fields are dependent upon the moving object's brightness, N can not distinguish between a bright object moving at an angle between the fields, and a dim object moving in the direction N is sensitive to. (4) If a large  object cover both f1, and f2, both will fire so long as the object is in front of them, meaning that N will fire event if there no motion in a large object.
+\begin{figure}[H]
+\begin{multicols}{2}
+\includegraphics[width=1\linewidth]{figure/model3.png}
+\columnbreak
+\includegraphics[width=1\linewidth]{figure/model4.png}
+\end{multicols}
+\label{fig:delay}
+\caption{This cuircuit can blablabablabalablablalbalaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa}
+\end{figure}
+These problem have led to the suggesting that these type of circuits operate in pairs of two. With two neurons (N1 and N2) sensitive to motion in opposite direction as shown in Figure \ref{fig:delay}. In this circuit the final output OUT is a neuron which normally fires at a baseline rate. OUT get an excitatory signal, which causes it to fire more often, from N2, and an inhibitory which causes it to fire less often from N1. In other words, if N2 fires the output will be larger, and if N1 fires the output will be smaller, and if none or both fire the output will be the normal baseline. This change solves some of the problems with the circuit above. (3), in cases where the objects direction is neither in N1 or N2's preferred direction, both will give a weaker signal canceling each other out. (4) In case of a stationary object, both N1 and N2 will again send a similar signal, canceling each other out. This circuit has properties similar to those of the direction sensitive cells in rabbit eyes described by \cite{Barlow1965}. If a stimulus is moved over between f1 and f2. N2 will fire and N1 will not, resulting in a big output when luminance changes happens in the preferred direction. Reverse the direction and only a inhibitory signal is fired, resulting in a small output.
 \section{Optic flow as a mechanism for illusory self motion}
 Knowing that optic flow is important for movement perception, goes a long way to explaining the phenomenon of vection. Let us again consider the train scene. If one is sitting in a stationary train, and the train outside the window sets in motion, the train will be moving on the retina in a way reminiscent of optical flow. It will stimulate the eyes in ways similar to optical flow. The input to the brain is the same as if actual motion happened and the brain can not differentiate between the simulated and real optical flow. For the brain, the presence of flow indicates motion and the direction of the flow indicates movement in the opposite direction.\todo{figure here}\\\\
 But the motion system is based on a large range of factors input from different senses, such as visual, auditory, vestibular, somatosensory, and proprioceptive systems\cite{wind}. With your eyes closed you can very easily tell weather you are moving or not. I know that this is stating the obvious but it illustrates that there are other processes that normally would prevent optic flow from tricking the brain. Therefore, one is more likely to experience vection in situations where the stimuli are absent. Take as an example the train. Passengers are in an enclosed space, and so do not feel air resistance during motion. This would normally clue the brain into whether you or the background is moving. In a train your movement is independent from your muscles, so the signals sent to the motor neurons in the muscle so there is no help to get from the vestibular system. You are effectively stationary in a moving box, neither your balance or perception of where your limbs are(proprioception) indicates whether you are in motion.\\\\
-All this is to say that the range of situations in which one can experience vection is quiet limited. Most people experience vection when around or aboard vehicles large enough to alter optic flow. When vection causes a feeling of movement in a straight line it is called \textit{linear vection}(\cite{vectionlinear}). Other types of vection exist that can be experienced under different conditions. When placed inside a rotating drum with patterns, people experience a different type of vection called circular vection(\cite{}\todo{find citation}). This is used mostly in experimental studies, as these conditions rarely occur in real life.
+All this is to say that the range of situations in which one can experience vection is quiet limited. Most people experience vection when around or aboard vehicles large enough to alter optic flow. When vection causes a feeling of movement in a straight line it is called \textit{linear vection}(\cite{vectionlinear}). Other types of vection exist that can be experienced under different conditions. When placed inside a rotating drum with patterns, people experience a different type of vection called circular vection. This is used mostly in experimental studies, as these conditions rarely occur in real life.
 \todo{figure}
 \\\\
 The strength of the vection is dependant upon a number of factors such as the size of the flow, with larger motion causing a more compelling illusion. The further away the flow is perceived as being, the better it is a inducing vection. Meaning that optic flow in the peripheral vision is more likely to cause vection. This is supported by \cite{vection}, who found that when inducing vection, movement in the background was dominant over foreground movement.\\\\
-The duration of vection is also dependant a number of factors   
+The duration of vection depends on the environment that caused it. In lab conditions specifically designed for it, and with continuous stimuli vection can last for ten's of seconds(\cite{vection}). But in real world scenarios vection will rarely last this long.  
 \section{Vection in relation to other types of illusory self motion}
-In an article \cite{challenges}, points out that the illusion of self motion can be achieved by stimulating many different areas. for example, using auditory cue illusory movement can be induced, though they tend to be weaker than visual illusions (\cite{auditory, movement}). \cite{wind} found that wind hitting a large of the body could induce illusions of self movement. Even simple biomechanical movement can induce illusion of self motion (\cite{movement,challenges}). At the end of the day, how vection is different from the above mentioned illusion really depend on how you define it. As mentioned in section \real{sec:def}, there are multiple definitions of vection. Many of the studies cited that i define as different from vection, use the term vection to describe their respective illusion. So whether or not they are part of vection depends on who you ask\\\\
-Vestibular illusions -
-\section{VECTION AND VR, roller coasters}
-
-
-
+In an article \cite{challenges}, points out that the illusion of self motion can be achieved by stimulating many different areas. for example, using auditory cue illusory movement can be induced, though they tend to be weaker than visual illusions (\cite{auditory, movement}). \cite{wind} found that wind hitting a large of the body could induce illusions of self movement. Even simple biomechanical movement can induce illusion of self motion (\cite{movement,challenges}). At the end of the day, how vection is different from the above mentioned illusion really depend on how you define it. As mentioned in section \real{sec:def}, there are multiple definitions of vection. Many of the studies cited that i define as different from vection, use the term vection to describe their respective illusion. So whether or not they are part of vection depends on who you ask. \todo{Vestibular illusions}
 \section{Discussion}
-After you have reported the theory and clarified or answered the questions stated in
-the topic you should devote about one page to put this into context. Try to think of
-what it means for everyday life and our usage of digital media. Find examples! What
-should one take into consideration when designing multimedia applications? How can
-you use the knowledge in your semester project?
+VECTION AND VR, roller coasters
+Visually induced motion sickness
 
 \bibliographystyle{apacite}
 \bibliography{include/backmatter/bibliography}
