discussion is left, rest is done

--- a/include/backmatter/bibliography.bib
+++ b/include/backmatter/bibliography.bib
@@ -33,6 +33,27 @@ url = "http://www.sciencedirect.com/science/article/pii/S0042698909004350",
 author = "Takeharu Seno and Hiroyuki Ito and Shoji Sunaga",
 keywords = "Vection, Object and background hypothesis, Rubin’s vase"
 }
+@Article{vims,
+author={Keshavarz, Behrang
+and Riecke, Bernhard E.
+and Hettinger, Lawrence J.
+and Campos, Jennifer L.},
+title={Vection and visually induced motion sickness: how are they related?},
+journal={Front Psychol},
+year={2015},
+month={Apr},
+day={20},
+publisher={Frontiers Media S.A.},
+volume={6},
+pages={472},
+abstract={The occurrence of visually induced motion sickness has been frequently linked to the sensation of illusory self-motion (vection), however, the precise nature of this relationship is still not fully understood. To date, it is still a matter of debate as to whether vection is a necessary prerequisite for visually induced motion sickness (VIMS). That is, can there be VIMS without any sensation of self-motion? In this paper, we will describe the possible nature of this relationship, review the literature that addresses this relationship (including theoretical accounts of vection and VIMS), and offer suggestions with respect to operationally defining and reporting these phenomena in future.},
+note={25941509[pmid]},
+issn={1664-1078},
+doi={10.3389/fpsyg.2015.00472},
+url={http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4403286/}
+}
+
+
 @article{auditory,
 title = "Auditorily-induced illusory self-motion: A review",
 journal = "Brain Research Reviews",
